# sqlprism

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/skills/creating-branches-and-prs/: PR-TEMPLATE.md  SKILL.md
.claude/skills/implementing-issues/: AGENT-INSTRUCTIONS.md  SKILL.md  TASK-FORMAT.md
.claude/skills/managing-project-releases/: BDD-TEMPLATE.md  SKILL.md
.claude/skills/reviewing-prs/: COMMENT-TEMPLATE.md  REVIEWERS.md  SKILL.md
.claude/skills/writing-graph-queries/: EXAMPLES.md  SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/api/: conventions.md  dbt.md  graph.md  indexer.md  mcp-tools.md  sql-parser.md  sqlmesh.md  types.md
docs/architecture/: overview.md  schema.md
docs/getting-started/: configuration.md  installation.md
docs/guide/: cli.md  conventions.md  dbt.md  mcp-tools.md  sqlmesh.md
src/sqlprism/: __init__.py  cli.py  types.py
src/sqlprism/core/: conventions.py  graph.py  indexer.py  mcp_tools.py  naming.py
src/sqlprism/languages/: __init__.py  dbt.py  sql.py  sqlmesh.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_conventions.py  test_conventions_inference.py  test_conventions_layers.py  test_conventions_overrides.py  test_conventions_placement.py  test_conventions_tagging.py  test_federation.py  test_graph.py  test_graph_tools.py  test_indexer.py  test_indexer_columns.py  test_indexer_core.py  test_indexer_dbt_schema.py  test_indexer_integration.py  test_indexer_reindex.py  test_indexer_schema.py  test_languages.py  test_mcp_pr_impact.py  test_mcp_reindex_files.py  test_mcp_schema_context.py  test_mcp_search_trace.py  test_mcp_tools.py  test_mcp_validation.py  test_renderers.py  test_sql_parser.py  test_types.py
