[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlprism"
version = "1.0.0"
description = "SQL codebase indexer with column-level lineage, impact analysis, and MCP server support"
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Alfred Johnson", email = "alfjohnfred@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "duckdb>=1.5.0",
    "sqlglot>=28.0.0,<30",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/darkcofy/sqlprism"
Repository = "https://github.com/darkcofy/sqlprism"
Issues = "https://github.com/darkcofy/sqlprism/issues"

[project.scripts]
sqlprism = "sqlprism.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlprism"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.5.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.coverage.run]
source = ["sqlprism"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
