[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlprism"
version = "1.2.1"
description = "SQL codebase indexer with column-level lineage, impact analysis, and MCP server support"
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Alfred Johnson", email = "alfjohnfred@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "duckdb>=1.5.0",
    "sqlglot[c]>=30.0.0,<31",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/darkcofy/sqlprism"
Documentation = "https://darkcofy.github.io/sqlprism/"
Repository = "https://github.com/darkcofy/sqlprism"
Issues = "https://github.com/darkcofy/sqlprism/issues"

[project.scripts]
sqlprism = "sqlprism.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlprism"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.5.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "ty>=0.0.23",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# FastMCP's @mcp.tool decorator has incomplete type stubs
invalid-argument-type = "warn"

[tool.ty.analysis]
# Third-party libs with missing or incomplete stubs
replace-imports-with-any = ["duckdb.**", "sqlglot.**"]

[[tool.ty.overrides]]
# Tests access module internals (_state) after configure() and use
# Pydantic alias kwargs — suppress noise from test patterns
include = ["tests/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"
unknown-argument = "warn"
not-subscriptable = "warn"
unsupported-operator = "warn"
invalid-assignment = "warn"

[tool.coverage.run]
source = ["sqlprism"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
